# SuperQube_games

./: .gitattributes  .gitignore  README.md  VIZ_README.md  app.py  env.example  issues.md  ptm_visualization_spec.md  pyproject.toml
docs/: dashboard_enhancement_proposal.md  dashboard_enhancements_summary.md  dashboard_final_enhancements.md  real_data_policy.md
pricing_truth_machine_issues/: issue_0.1.md  issue_1.1.md  issue_1.2.md  issue_2.1.md  issue_3.1.md  issue_3.2.md  issue_4.1.md  issue_4.2.md  issue_4.3.md  issue_5.1.md  issue_5.2.md  issue_6.1.md  issue_6.2.md  issue_7.1.md  issue_7.2.md  issue_8.1.md  issue_8.2.md  issue_9.1.md
src/ptm/: __init__.py  aggregation.py  cli.py  config.py  extraction.py  json_output.py  llm_reasoning.py  parsing.py  query_strategy.py  reporting.py  schemas.py  tavily_client.py  verdict.py
src/ptm_viz/: __init__.py  charts.py  components.py  loader.py  transforms.py
tests/: __init__.py  test_aggregation.py  test_config.py  test_extraction.py  test_json_output.py  test_llm_reasoning.py  test_parsing.py  test_parsing_edge_cases.py  test_placeholder.py  test_query_strategy.py  test_reporting.py  test_schemas.py  test_tavily_client.py  test_verdict.py
